[package]
name = "wooting-integrations"
version = "0.2.0"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
description = "My personal Wooting keyboard integrations"
readme = "README.md"
repository = "https://github.com/ShayBox/Wooting-Integrations"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
colorgrad = { version = "0.7", optional = true }
hidapi = { version = "2", default-features = false }
hyprland = { version = "0.4.0-alpha.2", optional = true }

[features]
default = ["hyprland", "rainbow", "hidapi/linux-shared-hidraw"]
hyprland = ["dep:hyprland"]
rainbow = ["dep:colorgrad"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
