[package]
name = "wooting-integrations"
version = "0.5.2"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
description = "My personal Wooting keyboard integrations"
readme = "README.md"
repository = "https://github.com/ShayBox/Wooting-Integrations"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
colorgrad = { version = "0.7", optional = true }
hidapi = { version = "2", default-features = false }
hyprland = { version = "0.4.0-alpha.2", optional = true }
memoize = { version = "0.4", optional = true }

[features]
default = ["animation", "hyprland", "mangohud", "wooting", "hidapi/linux-shared-hidraw"]
animation = ["dep:memoize", "dep:colorgrad"]
hyprland = ["dep:memoize", "dep:hyprland"]
mangohud = ["dep:memoize"]
wooting = ["dep:memoize"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
